--- a/style.css
+++ b/style.css
@@ -65,6 +65,8 @@ footer {
 	background-color: #1F2937;
 	color: #e5e7eb;
 	font-size: 18px;
+	gap: 2rem;
+
 }
 
 #main-text {
@@ -90,6 +92,7 @@ footer {
 
 #cards {	
 	display: flex;
+	gap: 1rem;
 }
 
 .sign-up-button {
@@ -97,15 +100,22 @@ footer {
 	color: #e5e7eb;
 }
 
+#main-sign-up-button {
+	border-radius: 0.2rem;
+	border-style: none;
+}
+
 .image-card>img {
 	width: 10rem;
-	height: 15rem;
+	height: 10rem;
+	border-radius: 1rem;
 }
 
 #intro-info {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
+	gap: 1.5rem;
 }
 
 #quote {
@@ -152,4 +162,24 @@ footer {
 	font-weight: bolder;
 	font-size: 18px;
 	padding-right: 2rem;
+}
+
+.image-card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1rem;
+	padding: 1rem;
+}
+
+.image-card-text {
+	flex-wrap: wrap;
+	text-align: center;
+}
+
+#info-section-main-text {
+	text-align: center;
+	font-size: 36px;
+	color: #1F2937;
+	font-weight: bolder;
 }
